[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Controls" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Controls"]
margin_left = -4.0
margin_top = 48.0
margin_right = 1276.0
margin_bottom = 288.0

[node name="Items" type="VBoxContainer" parent="TabContainer/Controls/CenterContainer"]
margin_left = 489.0
margin_top = 54.0
margin_right = 790.0
margin_bottom = 185.0

[node name="controller" type="VBoxContainer" parent="TabContainer/Controls/CenterContainer/Items"]
visible = false
margin_right = 301.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="TabContainer/Controls/CenterContainer/Items/controller"]
margin_right = 301.0
margin_bottom = 14.0
text = "Controller Settings"
uppercase = true

[node name="EnableController" type="HBoxContainer" parent="TabContainer/Controls/CenterContainer/Items/controller"]
margin_top = 18.0
margin_right = 301.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="TabContainer/Controls/CenterContainer/Items/controller/EnableController"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Enable Controllers: "

[node name="player1" type="CheckBox" parent="TabContainer/Controls/CenterContainer/Items/controller/EnableController"]
margin_left = 128.0
margin_right = 207.0
margin_bottom = 24.0
text = "Player 1"

[node name="player2" type="CheckBox" parent="TabContainer/Controls/CenterContainer/Items/controller/EnableController"]
margin_left = 211.0
margin_right = 290.0
margin_bottom = 24.0
text = "Player 2"

[node name="KeyBoardControls" type="VBoxContainer" parent="TabContainer/Controls/CenterContainer/Items"]
margin_right = 301.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls"]
margin_right = 301.0
margin_bottom = 31.0
text = "Keyboard Controls
"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls"]
margin_top = 35.0
margin_right = 301.0
margin_bottom = 103.0

[node name="Controls" type="VBoxContainer" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer"]
margin_right = 77.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Controls"]
margin_right = 77.0
margin_bottom = 14.0

[node name="Movement" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Controls"]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 32.0
text = "Movement: "

[node name="ActionOne" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Controls"]
margin_top = 36.0
margin_right = 77.0
margin_bottom = 50.0
text = "ActionOne: "

[node name="ActionTwo" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Controls"]
margin_top = 54.0
margin_right = 77.0
margin_bottom = 68.0
text = "ActionTwo:"

[node name="Player 1 Controls" type="VBoxContainer" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer"]
margin_left = 81.0
margin_right = 189.0
margin_bottom = 68.0
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player 1 Controls"]
margin_right = 108.0
margin_bottom = 14.0
text = "Player 1 Controls"

[node name="Label2" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player 1 Controls"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 32.0
text = "WASD"
align = 1

[node name="Label3" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player 1 Controls"]
margin_top = 36.0
margin_right = 108.0
margin_bottom = 50.0
text = "J"
align = 1

[node name="Label4" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player 1 Controls"]
margin_top = 54.0
margin_right = 108.0
margin_bottom = 68.0
text = "K"
align = 1

[node name="Player2 Controls" type="VBoxContainer" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer"]
margin_left = 193.0
margin_right = 301.0
margin_bottom = 68.0
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player2 Controls"]
margin_right = 108.0
margin_bottom = 14.0
text = "Player 2 Controls"

[node name="Label2" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player2 Controls"]
margin_top = 18.0
margin_right = 108.0
margin_bottom = 32.0
text = "Arrows"
align = 1

[node name="Label3" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player2 Controls"]
margin_top = 36.0
margin_right = 108.0
margin_bottom = 50.0
text = "1"
align = 1

[node name="Label4" type="Label" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/HBoxContainer/Player2 Controls"]
margin_top = 54.0
margin_right = 108.0
margin_bottom = 68.0
text = "2"
align = 1

[node name="shrink" type="CheckBox" parent="TabContainer/Controls/CenterContainer/Items/KeyBoardControls"]
margin_top = 107.0
margin_right = 301.0
margin_bottom = 131.0
text = "Shrink Keyboard?"

[connection signal="pressed" from="TabContainer/Controls/CenterContainer/Items/controller/EnableController/player1" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="TabContainer/Controls/CenterContainer/Items/controller/EnableController/player2" to="." method="_on_player2_pressed"]
[connection signal="pressed" from="TabContainer/Controls/CenterContainer/Items/KeyBoardControls/shrink" to="." method="_on_shrink_pressed"]
